kubernetes-books/k8s-book/04-istio/03-traffic-management/mainfest/mirror/httpbin-sleep-curl-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
        - name: sleep
          image: curlimages/curl
          command: ["/bin/sleep","3650d"]
          imagePullPolicy: IfNotPresent
