kubernetes-books/k8s-book/04-istio/03-traffic-management/mainfest/mirror/httpbin-mirror-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
