kubernetes-books/k8s-book/04-istio/03-traffic-management/mainfest/mirror/httpbin-mirror-vs-v1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin
  http:
    - route:
        - destination:
            host: httpbin
            subset: v1
          weight: 100
